Update to Java 17, fix library versions, refactor code.